<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        style="@style/TemperatureConverter.Body1"
        android:id="@+id/celsius_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/celsius"
        android:layout_marginEnd="@dimen/text_margin"
        app:layout_constraintBottom_toBottomOf="@+id/celsius_text_layout"
        app:layout_constraintEnd_toStartOf="@+id/celsius_text_layout"
        app:layout_constraintTop_toTopOf="@+id/celsius_text_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/celsius_text_layout"
        android:layout_width="@dimen/text_layout_width"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:expandedHintEnabled="false"
        app:suffixText="°C">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/celsius_text_input"
            android:inputType="numberDecimal|numberSigned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/TemperatureConverter.Body1"
        android:id="@+id/fahrenheit_text_view"
        android:layout_marginEnd="@dimen/text_margin"
        android:text="@string/fahrenheit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/fahrenheit_text_layout"
        app:layout_constraintEnd_toStartOf="@+id/fahrenheit_text_layout"
        app:layout_constraintTop_toTopOf="@+id/fahrenheit_text_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fahrenheit_text_layout"
        android:layout_width="@dimen/text_layout_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_layout_margin"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/celsius_text_layout"
        app:expandedHintEnabled="false"
        app:suffixText="F">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fahrenheit_text_input"
            android:inputType="numberDecimal|numberSigned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/TemperatureConverter.Body1"
        android:id="@+id/kelvin_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/text_margin"
        android:text="@string/kelvin"
        app:layout_constraintBottom_toBottomOf="@+id/kelvin_text_layout"
        app:layout_constraintEnd_toStartOf="@+id/kelvin_text_layout"
        app:layout_constraintTop_toTopOf="@+id/kelvin_text_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/kelvin_text_layout"
        android:layout_width="@dimen/text_layout_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_layout_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fahrenheit_text_layout"
        app:expandedHintEnabled="false"
        app:suffixText="K">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/kelvin_text_input"
            android:inputType="numberDecimal|numberSigned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>